--- a/styles.css
+++ b/styles.css
@@ -94,6 +94,7 @@ header > .intro-section {
   overflow: hidden;
   transition: max-height 0.5s ease-in-out; /* Smooth unfolding */
   /* height: 100vh; */
+  z-index: 100;
 }
 
 #nav-menu.show {
